-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b23
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8256805 | 11.0.10 | Aleksey Shipilev | P4 | Resolved | Fixed | b04 |
aarch64-zero:
In file included from /home/shade/jdk-jdk/src/hotspot/share/interpreter/interpreterRuntime.hpp:34:0,
from /home/shade/jdk-jdk/src/hotspot/cpu/zero/stack_zero.cpp:28:
/home/shade/jdk-jdk/src/hotspot/share/runtime/thread.hpp:1226:26: warning: inline function 'JavaThreadState JavaThread::thread_state() const' used but never defined
inline JavaThreadState thread_state() const;
^~~~~~~~~~~~
In file included from /home/shade/jdk-jdk/src/hotspot/share/interpreter/interpreterRuntime.hpp:34:0,
from /home/shade/jdk-jdk/src/hotspot/cpu/zero/stack_zero.cpp:28:
/home/shade/jdk-jdk/src/hotspot/share/runtime/thread.hpp:1226:26: warning: inline function 'JavaThreadState JavaThread::thread_state() const' used but never defined
inline JavaThreadState thread_state() const;
^~~~~~~~~~~~
- backported by
-
JDK-8256805 Zero builds fail with "undefined JavaThread::thread_state()"
-
- Resolved
-
- relates to
-
JDK-8200299 Non-PCH build for aarch64 fails
-
- Resolved
-
-
JDK-8199809 Don't include frame.inline.hpp and other.inline.hpp from .hpp files
-
- Resolved
-