8214787: Zero builds fail with "undefined JavaThread::thread_state()"

Reviewed-by: stuefe, zgu